tests/rosetta/out/Fortran/conditional-structures-8.error
parse: error[P001]: /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-8.mochi:7:3: unexpected token "if" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-8.mochi:7:3

  7 |   if b2 {
    |   ^

help:
  Check for a missing `{` or `}` to close the block.